Return back botton added

--- a/types-of-climbing/alpine-climbing.html
+++ b/types-of-climbing/alpine-climbing.html
@@ -34,5 +34,7 @@
             <li>Extreme weather conditions</li>
         </ol>
 
+        <a href="../index.html">Back to previous page</a>
+        
 </body>
 </html>
